# console-game

./: Cargo.toml
ecs-derive/: Cargo.toml
ecs-derive/src/: lib.rs
src/: main.rs
src/component/: component.rs  entity.rs  mesh.rs  mod.rs  range.rs  rot.rs  transform_matrix.rs  vec3.rs  world.rs
src/entity/: entity.rs
src/game/entities/: camera.rs  mesh.rs  mod.rs  point.rs  resource.rs  test_entity.rs
src/scene/: scene.rs
src/termren/: input_reader.rs  line_render.rs  mod.rs  renderer.rs  ticker.rs  world.rs
