workspace = { members = ["ecs-derive"] }
[package]
name = "console-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "3.0.0"
downcast-rs = "1.2.0"
proc-macro2 = "=1.0.67"
rayon="1.8.1"

ecs-derive = { path = "ecs-derive" }